that actually wasn't too hard
- i finally made the move to qt because swing is buns (qtjambi)
- also more blockbench stuff